3.1.3-stable (2013-??-??)
	* Fixed: Support from properties from draft-daboo-valarm-extensions-04.
	  Issue #56.
	* Fixed: Issue #54. Parsing a stream of multiple vcards separated by more
	  than one newline. Thanks @Vedmak for the patch.

3.1.2-stable (2013-08-13)
	* Fixed: Setting correct property group on VCard conversion

3.1.1-stable (2013-08-02)
	* Fixed: Issue #53. A regression in RecurrenceIterator.

3.1.0-stable (2013-07-27)
	* Added: bad-ass new cli debugging utility (in bin/vobject).
	* Added: jCal and jCard parser.
	* Fixed: URI properties should not escape ; and ,.
	* Fixed: VCard 4 documents now correctly use URI as a default value-type
	  for PHOTO and others. BINARY no longer exists in vCard 4.
	* Added: Utility to convert between 2.1, 3.0 and 4.0 vCards.
	* Added: You can now add() multiple parameters to a property in one call.
	* Added: Parameter::has() for easily checking if a parameter value exists.
	* Added: VCard::preferred() to find a preferred email, phone number, etc
	  for a contact.
	* Changed: All $duration properties are now public.
	* Added: A few validators for iCalendar documents.
	* Fixed: Issue #50. RecurrenceIterator gives incorrect result when
	  exception events are out of order in the iCalendar file.
	* Fixed: Issue #48. Overridden events in the recurrence iterator that were
	  past the UNTIL date were ignored.
	* Added: getDuration for DURATION values such as TRIGGER.
	  Thanks to @SimonSimCity.
	* Fixed: Issue #52. vCard 2.1 parameters with no name may lose values if
	  there's more than 1. Thanks to @Vedmak.

3.0.0-stable (2013-06-21)
	* Fixed: includes.php file was still broken. Our tool to generate it had
	  some bugs.

3.0.0-beta4 (2013-06-21)
	* Fixed: includes.php was no longer up to date.

3.0.0-beta3 (2013-06-17)
	* Added: OPTION_FORGIVING now also allows slashes in property names.
	* Fixed: DateTimeParser no longer fails on dates with years < 1000
	  & > 4999